--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
-      %th Rating
-      %th Release Date
-      %th More Info
+      %th= link_to "Movie Title"
+      %th= link_to "Rating"
+      %th= link_to "Release Date"
+      %th= link_to "More Info"
   %tbody
     - @movies.each do |movie|
       %tr
