--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th= link_to "Movie Title"
-      %th= link_to "Rating"
-      %th= link_to "Release Date"
-      %th= link_to "More Info"
+      %th{:id=> "title_header", :class=> @title_header}= link_to "Movie Title", movies_path({:sort => 'title'})
+      %th Rating
+      %th{:id=> "release_date_header", :class=> @release_date_header}= link_to "Release Date", movies_path({:sort => 'release'})
+      %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
